<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="#161616"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="6" >

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText_Weight"
        android:background="@drawable/button_blue"
        android:onClick="button_basic_click"
        android:tag="basic"
        android:text="@string/button_basisc_buttons" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonText_Weight"
        android:background="@drawable/button_blue"
        android:onClick="button_basic_click"
        android:tag="9patch"
        android:text="@string/button_nine_patch_glossy" />

    <Button
        android:id="@+id/button3"
        style="@style/ButtonText_Weight"
        android:background="@drawable/button_blue"
        android:onClick="button_basic_click"
        android:tag="matte"
        android:text="@string/button_nine_patch_matte" />

    <Button
        android:id="@+id/button4"
        style="@style/ButtonText_Weight"
        android:background="@drawable/button_blue"
        android:onClick="button_basic_click"
        android:tag="advanced"
        android:text="@string/button_gradients_advanced" />
    
    <Button
        android:id="@+id/button5"
        style="@style/ButtonText_Weight"
        android:background="@drawable/button_blue"
        android:onClick="button_basic_click"
        android:tag="apple"
        android:text="@string/button_apple" />

    <LinearLayout
        android:id="@+id/llAdmob"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>